# hypr-showkey

./: .gitignore  .tool-versions  Cargo.toml  README.md  Taskfile.yml  dist-workspace.toml  showkey.yaml  test-theme-custom.yaml  test-theme-latte.yaml
.github/workflows/: ci.yml  release.yml
rpm/: README.md  hypr-showkey.spec  make_sdist.sh
src/: config.rs  main.rs  parser.rs  theme.rs  tui.rs
