[package]
name = "hypr-showkey"
version = "0.1.0"
edition = "2021"
authors = ["Ryan Wallace"]
description = "A TUI application to display and search Hyprland keybindings"
license = "Apache-2.0"

[dependencies]
ratatui = "0.29"
crossterm = "0.29"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
fuzzy-matcher = "0.3"
dirs = "6.0"
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
regex = "1.10"